--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,17 @@
 body
 {
-color:aquamarine;
-text-align:center;
+color:black;
+text-align:left;
 font-family: "Arial";
+font: size 16px;
+margin: 0;
+padding: 0;
+}
+
+#container
+{
+    width: 70%;
+    padding: 1em;;
+    text-align: left;
+    border: 1px solid #ddd;
 }
